@@ -43,10 +43,10 @@
 void Fl_Window::border(int b) {
   if (b) {
     if (border()) return;
-    clear_flag(FL_NOBORDER);
+    clear_flag(NOBORDER);
   } else {
     if (!border()) return;
-    set_flag(FL_NOBORDER);
+    set_flag(NOBORDER);
   }
 #if defined(USE_X11)
   if (shown()) Fl_X::i(this)->sendxjunk();
